# background-multimodal-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  DEPLOYMENT-PREREQUISITES.md  DEV-QUICKSTART.md  HTTPS-SETUP.md  README.md  SPEECH_SESSION_IMPROVEMENTS.md  VAD_DEBUGGING_ANALYSIS.md  WEBSOCKET_IMPROVEMENTS.md  docker-compose.dev.yml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: deploy-dev.yml
backend/: .flake8  =0.1.99  Dockerfile  MULTIMODAL_README.md  STT_README.md  TTS_README.md  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_multimodal.py  test_pipeline.py  test_pipeline_changes.py  test_speech_sessions.py  test_stt.py  test_tts.py
backend/MCP/mcp_client/: client.py  perplexity_tool_handle.py
backend/backend/: main.py
backend/examples/: enhanced_tool_calling_demo.py
backend/models/: STT.py  TTS.py  enhanced_multimodal.py  enhanced_tool_calling.py  multimodal.py
backend/services/: performance_monitor.py  service_manager.py
backend/tests/: __init__.py  run_all_tests.py  test_multimodal.py  test_pipeline.py  test_pipeline_changes.py  test_speech_sessions.py  test_stt.py  test_tts.py
deployment/: docker-compose.dev.yml
deployment/infrastructure/: cloudformation-dev.yaml
deployment/scripts/: migrate-to-cloudflare.sh  quick-update.sh  setup-aws-dev.sh  update-urls.sh
docs/: CLOUDFLARE-SETUP.md  DEPLOYMENT-PREREQUISITES.md  DEV-QUICKSTART.md  HTTPS-SETUP.md
docs/backend/: INSTALL.md  MULTIMODAL_README.md  PIPELINE_CHANGES.md  STT_README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedIcons.tsx  ControlButtons.tsx  ConversationDisplay.tsx  StatusDisplay.tsx
frontend/src/hooks/: useAudioPlayback.ts  useScreenShare.ts  useVoiceActivityDetection.ts  useVoiceAssistant.ts  useWebSocket.ts
infrastructure/: cloudformation-dev.yaml
scripts/: add-nginx-ssl.sh  setup-aws-dev.sh  setup-cicd.sh  setup-https.sh
